<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_recipe">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newRecipe"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeName"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/profileTitle"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/recipeName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Enter your Recipe Name"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/ingredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/recipeTitle"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/ingredientsDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Enter the Ingredients"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direction"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsDescription"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/directionsDescription"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toBottomOf="@+id/directions"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Describe the steps for your recipe"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/foot_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foot_notes"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/directionsDescription"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/foot_notes_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/foot_notes"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Share a tip or advice for more delicious taste"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/neutrition_fact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/neutrition_fact"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/foot_notes_description"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/neutrition_fact_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/neutrition_fact"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Mention Nutrition Facts about the recipe"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <TextView
                android:id="@+id/ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ratings"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/neutrition_fact_description"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/ratings"/>

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/spinner1"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/url_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/url"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/edittext_bottom_line"
                android:ems="10"
                android:gravity="left"
                android:hint="Save helpful Video or Web Site Link"
                android:visibility="visible"
                android:textColorHint="@color/colorGray" />

            <FrameLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/saveChanges"
                    style="@style/login_btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/url_description"
                    android:text="Save"
                    android:visibility="visible"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="100dp"
                    android:background="@color/colorPrimary"/>

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/login_btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/url_description"
                    android:text="Cancel"
                    android:visibility="visible"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="200dp"
                    android:background="@color/colorPrimary"/>
            </FrameLayout>


            <TextView
                android:id="@+id/dummy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/ratings"
                android:textStyle="normal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>

    <!--
    2. https://stackoverflow.com/questions/25481244/how-add-a-border-only-on-bottom-of-edittext?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
    -->
